# DATAPIPE

./: ANALYSE_COMPLETE.txt  CHECKLIST_FINAL.md  Cargo.toml  DIAGRAMMES_PIPELINE.md  DOCUMENTATION_GUIDE.md  GUIDE_DIOM.md  GUIDE_TSEFACK.md  IMPLEMENTÉ_DIOM_RÉSUMÉ.md  INSTRUCTIONS_EQUIPE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  RAPPORT_CORRECTIONS_WARNINGS.md  README.md  README_NGANSOP.md  SESSION_SUMMARY.md  TESTING.md  WARNINGS_FIXES.md  demo.sh  pipeline.toml  test_delimited.toml  test_json.toml  test_pipeline.toml
.cargo/: config.toml
data/: clients.json  commandes.csv  commandes.json  contacts.csv  employees.csv  employes.csv  etudiants_ensp.csv  patients.csv  patients_hopital.csv  produits.json  sample_large.csv  test.csv  test.json  test_delimited.txt  transactions.csv  ventes_marche.csv  villes.txt
examples/: employes_transform.toml  produits_promo.toml  transactions_stream.toml  villes_grandes.toml
examples/basic/: pipeline.toml
examples/hospital/: pipeline.toml
examples/join_demo/: clients.json  commandes.csv  pipeline.toml
output/: employees_propres.json  employes_filtered.json  produits_export.csv  test_delimited_output.json  test_json_output.json  test_output.json  transactions_completed.jsonl
reports/: rapport.html
src/: config.rs  join.rs  lib.rs  main.rs  pipeline.rs  report.rs  stats.rs  validation.rs  watch.rs
src/reader/: csv_reader.rs  delimited_reader.rs  json_reader.rs  mod.rs
src/transform/: cast.rs  compute.rs  drop.rs  mod.rs  (+3 more)
tests/: csv_test.rs  integration_test.rs  integration_tests_extended.rs
(+5 files in other folders)
