[package]
name = "datapipe"
version = "0.1.0"
edition = "2021"
description = "DataPipe - Outil ETL en Rust pour le traitement de données"
authors = ["Groupe 6 - ENSPD-GLO4 2025-2026"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indexmap = "2.0"

[dev-dependencies]
tempfile = "3.0"


[[bin]]
name = "datapipe"
path = "src/main.rs"
